<resources>
    <string name="app_name">HydrateYou</string>
    <string name="title_knp_air_penting">Kenapa minum air putih penting?</string>
    <string name="explanation_air_putih" translatable="false">Air putih adalah cairan esensial bagi tubuh, berfungsi untuk menjaga hidrasi, mengatur suhu tubuh, dan membantu proses detoksifikasi. Selain itu, air putih berperan penting dalam pencernaan, menjaga kesehatan kulit, dan meningkatkan kinerja fisik. Karena tidak mengandung kalori,
        air putih merupakan pilihan yang baik untuk menjaga berat badan dan kesehatan secara keseluruhan. Untuk kesehatan optimal,
        disarankan agar orang dewasa mengonsumsi sekitar 2 hingga 3 liter air putih setiap hari, tergantung pada aktivitas dan kondisi lingkungan.</string>
    <string name="subtitle_perbandingan_kontribusi_hidrasi" translatable="false">Perbandingan kontribusi hidrasi harian setiap jenis minuman</string>
    <string name="air_putih_title" translatable="false">Air Putih</string>
    <string name="air_putih_desc" translatable="false">Kontribusi harian air putih sangat penting untuk kesehatan. Dengan konsumsi sekitar 2-3 liter per hari, air membantu menjaga keseimbangan cairan, mendukung pencernaan,
        dan mengatur suhu tubuh melalui berkeringat.</string>
    <string name="soft_drink_title" translatable="false">Minuman Ringan</string>
    <string name="soft_drink_desc" translatable="false">Soft drink adalah minuman ringan yang mengandung karbonasi, gula, dan perasa.
        Meskipun menyegarkan, konsumsi berlebihan dapat menyebabkan masalah kesehatan seperti obesitas, diabetes tipe 2, dan kerusakan gigi. Soft drink tinggi kalori, seringkali tanpa nilai gizi, dan
        dapat mengurangi asupan air putih yang penting untuk hidrasi.</string>
    <string name="minuman_energi_tittle" translatable="false">Minuman Energi</string>
    <string name="minuman_energi_desc" translatable="false">Minuman energi tidak efektif sebagai sumber hidrasi utama. Kandungan kafeinnya bersifat diuretik,
        sehingga mempercepat pengeluaran cairan dari tubuh. Selain itu, gula yang tinggi dapat menghambat penyerapan cairan dengan baik.
        Minuman ini lebih cocok untuk tambahan energi, bukan pengganti air putih. Untuk hidrasi harian, air putih atau minuman elektrolit tetap lebih disarankan.</string>
    <string name="jus_title" translatable="false">Minuman Jus</string>
    <string name="jus_desc" translatable="false">Jus buah dapat memberikan kontribusi hidrasi harian karena mengandung air yang cukup tinggi.
        Selain itu, jus kaya akan vitamin, mineral, dan antioksidan yang bermanfaat untuk kesehatan.
        Namun, kandungan gula, baik alami maupun tambahan, dapat mempengaruhi keseimbangan cairan.
        Oleh karena itu, jus sebaiknya tidak dijadikan pengganti air putih untuk hidrasi utama. Untuk manfaat optimal,
        pilih jus tanpa tambahan gula dan konsumsi dalam jumlah moderat.</string>
    <string name="tv_splash" translatable="false">Selamat datang di, <i>HydrateYou</i></string>
    <string name="tv_heading">Selamat Datang!!</string>
    <string name="tv_subheading">Masuk untuk memulai</string>
    <string name="tv_user">Nama Pengguna</string>
    <string name="tv_input_user">input your username</string>
    <string name="tv_pass">Kata Sandi</string>
    <string name="tv_input_pass">input your password</string>
    <string name="remember_me">ingat saya?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Masuk</string>
    <string name="tv_pengingat_minum">Sudah minum air hari ini?</string>
    <string name="tv_pengingat_panjang">Yuk, jangan lupa untuk minum air sekarang! Hidrasi yang baik penting untuk menjaga fokus dan energimu sepanjang hari.</string>
    <string name="tv_create_acc">Buat Akun Baru</string>
    <string name="tv_email">Email</string>
    <string name="daftar">Daftar</string>
    <string name="re_password">Ulangi Kata Sandi</string>
    <string name="ok">Ok</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="selesai">Selesai</string>
    <string name="nama">Nama</string>
    <string name="usia">Usia</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="isi_usia">11 tahun</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="umum">Umum</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="kebijakan">
    <b>Terima kasih telah menggunakan HydrateYou. Privasi Anda sangat penting bagi kami. Kebijakan Privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi informasi pribadi Anda.</b>\n\n

    <b>1. Informasi yang Kami Kumpulkan</b>\n
    Kami mengumpulkan beberapa jenis informasi untuk menyediakan dan meningkatkan layanan kami:\n
    - Informasi Identitas Pribadi: Nama, alamat email, dan informasi kontak lain yang Anda berikan secara langsung.\n
    - Informasi Penggunaan: Kami mengumpulkan informasi mengenai bagaimana Anda menggunakan aplikasi kami, termasuk halaman yang dikunjungi, fitur yang digunakan, dan durasi waktu penggunaan.\n
    - Informasi Teknis: Seperti alamat IP, jenis perangkat, sistem operasi, dan versi aplikasi untuk tujuan analitik dan peningkatan pengalaman pengguna.\n\n

    <b>2. Bagaimana Kami Menggunakan Informasi Anda</b>\n
    Kami menggunakan informasi yang kami kumpulkan untuk:\n
    - Menyediakan dan memelihara layanan kami.\n
    - Memahami bagaimana pengguna menggunakan aplikasi kami dan meningkatkan pengalaman pengguna.\n
    - Mengirimkan pembaruan, berita, atau pemberitahuan penting terkait aplikasi kami.\n
    - Mengembangkan fitur-fitur baru dan meningkatkan keamanan aplikasi kami.\n\n

    <b>3. Berbagi Informasi Anda</b>\n
    Kami tidak akan membagikan informasi pribadi Anda kepada pihak ketiga, kecuali dalam keadaan berikut:\n
    - Dengan Izin Anda: Kami akan meminta izin Anda jika kami ingin membagikan informasi pribadi Anda.\n
    - Kepatuhan Hukum: Jika diwajibkan oleh hukum atau otoritas yang berwenang, kami dapat mengungkapkan informasi pribadi Anda.\n
    - Penyedia Layanan: Kami dapat berbagi informasi dengan penyedia layanan yang bekerja atas nama kami untuk memudahkan operasi aplikasi, seperti layanan analitik atau pembayaran.\n\n

    <b>4. Keamanan Informasi</b>\n
    Kami berkomitmen untuk melindungi informasi pribadi Anda. Kami menerapkan langkah-langkah keamanan untuk mencegah akses, penggunaan, atau pengungkapan data yang tidak sah. Namun, harap diperhatikan bahwa tidak ada metode transmisi atau penyimpanan elektronik yang 100% aman.\n\n

    <b>5. Hak Anda</b>\n
    Anda memiliki hak untuk mengakses, memperbarui, atau menghapus informasi pribadi Anda yang ada di sistem kami. Jika Anda ingin melakukan salah satu dari tindakan ini, silakan hubungi kami di [alamat email kontak].\n\n

    <b>6. Perubahan Kebijakan Privasi</b>\n
    Kebijakan Privasi ini dapat kami perbarui dari waktu ke waktu. Kami akan memberitahukan perubahan signifikan melalui pemberitahuan di dalam aplikasi atau melalui email. Pastikan untuk meninjau kebijakan ini secara berkala agar tetap memahami bagaimana kami melindungi informasi pribadi Anda.
</string>
    <string name="hei_sudah_waktunya_tidur_sebelum_kamu_memejamkan_mata_minum_segelas_air_dulu_untuk_menjaga_hidrasi_tubuhmu_istirahat_yang_baik_membuatmu_lebih_segar_esok_hari_n_selamat_tidur">Hei, sudah waktunya tidur! Sebelum kamu memejamkan mata, minum segelas air dulu untuk menjaga hidrasi tubuhmu. Istirahat yang baik membuatmu lebih segar esok hari. \n Selamat tidur!</string>
    <string name="air_putih">Air Putih</string>
    <string name="itu_penting">Itu Penting?</string>
    <string name="air__putih">Air Putih</string>
    <string name="namapengguna_gmail_com">namapengguna@gmail.com</string>
    <string name="account">Don\'t have an account? <b>Sign in</b></string>
    <string name="hari_ini">Hari ini</string>
    <string name="_14_november_2024">14 November 2024</string>
    <string name="_14_nov">14 Nov</string>
    <string name="_15_nov">15 Nov</string>
    <string name="_16_nov">16 Nov</string>
    <string name="_17_nov">17 Nov</string>
    <string name="_18_nov">18 Nov</string>
    <string name="pelacak_air">Pelacak Air</string>
    <string name="_25_ml">25 ml</string>
    <string name="_100_ml">100 ml</string>
    <string name="_50_ml">50 ml</string>
    <string name="_200_ml">200 ml</string>
    <string name="_300_ml">300 ml</string>
    <string name="_400_ml">400 ml</string>
    <string name="hei_sudah">Hei, sudah waktunya tidur! Sebelum kamu memejamkan mata, minum segelas air dulu untuk menjaga hidrasi tubuhmu. Istirahat yang baik membuatmu lebih segar esok hari.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="username">Username</string>
    <string name="input_your_username">Input Your Username</string>
    <string name="password">Password</string>
    <string name="input_your_password">Masukkan Kata Sandi Anda</string>
    <string name="don_t_have_an_account_sign_in">Tidak punya akun? Daftar</string>
    <string name="welcome_to_hydrateyou">Selamat datang di, HydrateYou</string>
    <string name="create_a_new_account">Buat Akun Baru</string>
    <string name="name">Name</string>
    <string name="input_your_name">Input Your Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="challenge">Challenge</string>
    <string name="home">Home</string>
    <string name="information">Information</string>
    <string name="tittle_dashboard">Dashboard</string>
    <string name="tv_KonsumAir">Konsumsi air harian kamu!</string>
    <string name="tittle_KonsumBulanan">Konsumsi air bulanan kamu!</string>
    <string name="gapunyaakun">Belum punya akun?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pelacak_air_per_hari">Pelacak Air Per Hari</string>
    <string name="info">Informasi Pribadi</string>
    <string name="_0_ml_2000_ml">0 ml / 2000 ml</string>
</resources>