<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_information"
        android:title="@string/information"
        android:icon="@drawable/information"
        />
    <item
        android:id="@+id/bottom_water"
        android:title="@string/pelacak_air_per_hari"
        android:icon="@drawable/water"
        />
    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/bottom_challenge"
        android:title="@string/challenge"
        android:icon="@drawable/challenge"
        />
    <item
        android:id="@+id/bottom_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        />
</menu>