<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/righteous"
        android:text="@string/hari_ini"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:text="@string/_14_november_2024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue_DDF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_14_nov"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue_DDF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_15_nov"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue_DDF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_16_nov"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue_DDF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_17_nov"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/blue_DDF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/_18_nov"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_DDF"
        android:text="Pelacak Air"
        android:fontFamily="@font/poppins_bold"
        tools:layout_editor_absoluteX="-10dp"
        tools:layout_editor_absoluteY="192dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="278dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="278dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="278dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="278dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="446dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="446dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="78dp"
        android:layout_height="81dp"
        app:srcCompat="@drawable/ic_air_putih"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="446dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <Button
        android:id="@+id/button8"
        android:layout_width="331dp"
        android:layout_height="268dp"
        android:background="@drawable/rounded_button"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="416dp"
        android:layout_marginStart="36dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hei_sudah"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="460dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_164"
        android:fontFamily="@font/righteous"
        android:text="OK"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="602dp" />


</androidx.constraintlayout.widget.ConstraintLayout>