<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_marginTop="32dp"
    tools:context=".dashboard">

    <TextView
        android:id="@+id/tvDashboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tittle_dashboard"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/blue_427"
        android:fontFamily="@font/righteous"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:indeterminate="false"
        android:layout_height="200dp"
        android:max="100"
        android:progress="75"
        android:layout_marginTop="20dp"
        android:progressDrawable="@drawable/circular_progressbar"
        android:progressTint="@color/blue_427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDashboard" />

    <TextView
        android:id="@+id/tvkonsumAir"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_KonsumAir"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="28dp"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintStart_toEndOf="@id/progressBar"/>

    <TextView
        android:id="@+id/tv_tittleKonsumBulanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_KonsumBulanan"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        />
    
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartKonsumBulanan"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittleKonsumBulanan"
        android:visibility="visible"/>




</androidx.constraintlayout.widget.ConstraintLayout>